# arda

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  environment.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docs.yml  publish.yml  testpypi.yml
benchmarks/: RESULTS.md
database/mhc/human/: b2m.fasta  class_i.fasta  class_ii.fasta
database/mhc/mouse/: README.md
database/mhc/rabbit/: README.md
database/mhc/rat/: README.md
database/mhc/rhesus_monkey/: README.md
database/vdj/human/: alleles.aa.fasta  combinations.tsv  d_germlines.fasta  markup.aa.tsv
database/vdj/mouse/: alleles.aa.fasta  combinations.tsv  d_germlines.fasta
database/vdj/rabbit/: alleles.aa.fasta  alleles.fasta  combinations.tsv  d_germlines.fasta  markup.aa.tsv  markup.tsv
database/vdj/rat/: alleles.aa.fasta  alleles.fasta  combinations.tsv  d_germlines.fasta  markup.aa.tsv  markup.tsv
database/vdj/rhesus_monkey/: alleles.aa.fasta  alleles.fasta  combinations.tsv  d_germlines.fasta  markup.aa.tsv  markup.tsv
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  reference_build.rst  usage.rst
docs/_static/: custom.css
examples/: README.md  example.airr.tsv  example.fasta
memory/: README.md  cluster-slurm.md  discordance-and-scaling.md  igblast-gotchas.md  markup-transfer.md  mmseqs-params.md  reading-frames.md  scaffold-enumeration.md
scripts/: analyze_discordance.py  bench_prefilter.py  bench_vs_igblast.py  build_test_fixtures.py  check_cdr3_junction.py  fetch_igblast.py  fetch_mhc.py  fetch_mmseqs.py
skills/arda/: SKILL.md
skills/arda/references/: annotation.md  install-mmseqs.md  reference-build.md  region-segments.md
src/_markup/: markup.cpp
src/arda/: __init__.py  _database_fetch.py  _mmseqs_fetch.py  adapter.py  cli.py  cluster.py  igblast.py  mmseqs.py  paths.py
tests/: conftest.py
tests/benchmark/: test_benchmark.py
tests/realworld/: test_realworld.py
tests/synthetic/: test_germline_segments.py  test_locus_disambiguation.py  test_synthetic.py
tests/unit/: test_adapter.py  test_airr_out.py  test_cli.py  test_cluster.py  test_combinations.py  test_markup.py  test_mmseqs_fetch.py  test_translate.py
(+54 files in other folders)
